# exms

./: Cargo.toml  build.sh
.github/workflows/: rust.yml
benches/: file_parsing_bench.rs
benches/bench_files/: bench.json  bench.toml
src/: error.rs  input.rs  lib.rs
src/exam/: mod.rs  parse.rs  plot.rs  statistics.rs  student.rs  summary.rs
