[package]
name = "exms"
authors = ["Author => joan"]
description = "Get statistics and compare exams results"
version = "0.1.88"
edition = "2021"
license = "MIT"
repository = "https://github.com/Joanjajas/exms"

[dependencies]
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.191", features = ["derive"] }
prettytable = "0.10.0"
serde_json = "1.0.108"
unidecode = "0.3.0"
colored = "2.0.4"
toml = "0.8.8"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.5.1"
tempfile = "3.8.1"

[[bench]]
name = "file_parsing_bench"
harness = false

[lib]
bench = false
