[package]
name = "exms"
authors = ["Author => joan"]
description = "Get statistics and compare exams results"
version = "0.2.17"
edition = "2021"
license = "MIT"
repository = "https://github.com/Joanjajas/exms"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
indexmap = { version = "2.2.6", features = ["serde"] }
prettytable = "0.10.0"
serde_json = "1.0.118"
unidecode = "0.3.0"
term_size = "0.3.2"
termplot = "0.1.1"
colored = "2.1.0"
toml = "0.8.14"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.5.1"

[[bench]]
name = "file_parsing_bench"
harness = false

[lib]
bench = false
